First big stylings
Got normalize.scss to really work, stylized buttons, inputs, typography,
imported some helper mixins, got nav all done-up, etc

--- a/scss/base/normalize/_import-now.scss
+++ b/scss/base/normalize/_import-now.scss
@@ -4,8 +4,8 @@
 // needed to normalize default HTML elements across all browsers.
 //
 // ```
-@import "normalize/import-now";
-// ``` 
+// @import "normalize/import-now";
+// ```
 
 @import '../normalize';
 @include normalize();
