--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,7 +1,9 @@
 // ==========================================================================
-// Base Imports
+// Component Imports
 // ==========================================================================
 
-@import 'variables';
-@import 'base';
-@import 'normalize/import-now';
+@import 'navigation';
+@import 'typography';
+@import 'buttons';
+@import 'inputs';
+@import 'images';
