--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,7 +1,6 @@
 // ==========================================================================
-// Base Imports
+// Utility Imports
 // ==========================================================================
 
-@import 'variables';
-@import 'base';
-@import 'normalize/import-now';
+@import 'mixins';
+@import 'extends';
