--- a/scss/application.scss
+++ b/scss/application.scss
@@ -3,5 +3,5 @@
 // ==========================================================================
 
 @import 'base/index';
-// @import 'components/index';
-// @import 'layout/index';
+@import 'utilities/index';
+@import 'components/index';
