--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -3,10 +3,18 @@
 // ==========================================================================
 
 .headline {
-  @extend %headline;
   @include m(primary) {
-    @extend %headline;
+    font-size: 2.5em;
+    line-height: 1.2em;
+    padding-left: 0.5em;
+    font-weight: $font-weight--ultra-bold;
     color: $color-secondary;
+  }
+  @include m(secondary) {
+    font-size: 1.25em;
+    color: $gray;
+    padding: 1em 0;
+    font-weight: normal;
   }
 }
 
@@ -17,4 +25,14 @@
   &:hover{
     color: darken($color-secondary, 20%)
   }
+}
+
+.blockquote {
+  border-left: 12px $color-secondary solid;
+  padding-left: 1em;
+  border-radius: 0.3em;
+  font-size: 1.4em;
+  font-style: italic;
+  line-height: 1.25em;
+  color: $gray;
 }
