--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,22 +6,22 @@
   @extend %btn;
   @include m(default) {
     @extend %btn;
-    background: $color-primary;
+    background-color: $color-primary;
   }
   @include m(success) {
     @extend %btn;
-    background: $color-success;
+    background-color: $color-success;
   }
   @include m(error) {
     @extend %btn;
-    background: $color-negative;
+    background-color: $color-negative;
   }
   @include m(warning) {
     @extend %btn;
-    background: $color-warning;
+    background-color: $color-warning;
   }
   @include m(info) {
     @extend %btn;
-    background: $color-info;
+    background-color: $color-info;
   }
 }
