--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,6 +2,7 @@
 // Component Imports
 // ==========================================================================
 
+@import 'grid';
 @import 'navigation';
 @import 'typography';
 @import 'buttons';
