--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -14,3 +14,12 @@
     @content;
   }
 }
+
+// Media Query Mixin
+@mixin mq($break) {
+  @if $break == 't' {
+    @media (min-width: $break-t) {
+      @content;
+    }
+  }
+}
