--- a/css/application.css
+++ b/css/application.css
@@ -1,25 +1,51 @@
-* {
-  font-family: "Open Sans", "Arial Black", Arial;
-  font-size: 16px;
-  line-height: 24px; }
-
-ul {
-  list-style: none;
-  text-align: center;
-  padding-left: 0; }
-  @media (min-width: 441px) {
-    ul {
-      display: flex;
-      justify-content: flex-end; } }
-
-p {
-  color: #838383; }
-
-.container {
+.centered, .img--logo, .img--avatar, .img--frame {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 100%;
   max-width: 1024px;
-  margin: 0 auto;
-  padding: 1.5em;
-  width: 100%; }
+  flex-grow: inherit; }
+
+.btn, .btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
+  border: none;
+  border-radius: 0.3em;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 100%;
+  margin: 1em 0;
+  padding: 1.5em 0; }
+  @media (min-width: 441px) {
+    .btn, .btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
+      max-width: 12em; } }
+
+.form__input {
+  border-bottom: 8px #58e1c1 solid;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  max-width: -webkit-fill-available;
+  padding: 1em 0.5em;
+  margin: 1em 0; }
+  .form__input:hover {
+    border-bottom: 8px #83e9d1 solid; }
+
+.nav__item, .nav__item--active {
+  padding: 1em 0;
+  border-radius: 0.5em;
+  text-decoration: none; }
+  @media (min-width: 441px) {
+    .nav__item, .nav__item--active {
+      padding: 1em; } }
+
+.link {
+  font-weight: 900;
+  color: #58e1c1;
+  text-decoration: none; }
+
+.img--logo, .img--avatar {
+  width: 12em;
+  display: block; }
 
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
@@ -425,93 +451,86 @@ template {
 [hidden] {
   display: none; }
 
-.centered, .img--logo, .img--avatar, .img--frame {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  max-width: 1024px; }
+* {
+  font-family: "Open Sans", "Arial Black", Arial;
+  font-size: 16px;
+  line-height: 24px; }
 
-.btn, .btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
-  border: none;
-  border-radius: 0.3em;
-  padding: 0.9em 0;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 700;
-  width: 100%;
-  margin: 1em 0;
-  max-width: 12em; }
-
-.form__input {
-  border-bottom: 8px #58e1c1 solid;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  width: 100%;
-  max-width: -webkit-fill-available;
-  padding: 1em 0.5em;
-  margin: 1em 0; }
-  .form__input:hover {
-    border-bottom: 8px #83e9d1 solid; }
-
-.nav__item, .nav__item--active {
-  padding: 1em 0;
-  border-radius: 0.5em;
-  text-decoration: none; }
+ul {
+  list-style: none;
+  text-align: center;
+  padding-left: 0; }
   @media (min-width: 441px) {
-    .nav__item, .nav__item--active {
-      padding: 1em; } }
+    ul {
+      display: flex;
+      justify-content: flex-end; } }
+
+p {
+  color: #838383; }
+
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 1.5em; }
+
+.grid__row {
+  margin: 2em 0; }
+  @media (min-width: 441px) {
+    .grid__row {
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      margin-top: 1em;
+      margin-bottom: 1em; } }
 
 @media (min-width: 441px) {
-  .grid__row {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column: span 12;
-    grid-gap: 1em;
-    margin-top: 1em;
-    margin-bottom: 1em; } }
+  .grid__col--1 {
+    width: calc(1024px*calc(1/12)); }
 
-.grid__col--1 {
-  grid-column: span 1; }
+  .grid__col--2 {
+    width: calc(1024px*calc(2/12)); }
 
-.grid__col--2 {
-  grid-column: span 2; }
+  .grid__col--3 {
+    width: calc(1024px*calc(3/12)); }
 
-.grid__col--3 {
-  grid-column: span 3; }
+  .grid__col--4 {
+    width: calc(1024px*calc(4/12)); }
 
-.grid__col--4 {
-  grid-column: span 4; }
+  .grid__col--5 {
+    width: calc(1024px*calc(5/12)); }
 
-.grid__col--5 {
-  grid-column: span 5; }
+  .grid__col--6 {
+    width: calc(1024px*calc(6/12)); }
 
-.grid__col--6 {
-  grid-column: span 6; }
+  .grid__col--7 {
+    width: calc(1024px*calc(7/12)); }
 
-.grid__col--7 {
-  grid-column: span 7; }
+  .grid__col--8 {
+    width: calc(1024px*calc(8/12)); }
 
-.grid__col--8 {
-  grid-column: span 8; }
+  .grid__col--9 {
+    width: calc(1024px*calc(9/12)); }
 
-.grid__col--9 {
-  grid-column: span 9; }
+  .grid__col--10 {
+    width: calc(1024px*calc(10/12)); }
 
-.grid__col--10 {
-  grid-column: span 10; }
+  .grid__col--11 {
+    width: calc(1024px*calc(11/12)); }
 
-.grid__col--11 {
-  grid-column: span 11; }
-
-.grid__col--12 {
-  grid-column: span 12; }
-
+  .grid__col--12 {
+    width: calc(1024px*calc(12/12)); } }
 .theme__colors {
+  margin: 0.5em 0;
   padding-top: 1em;
   padding-bottom: 1em;
   border-radius: 0.5em;
   text-align: center; }
+  @media (min-width: 441px) {
+    .theme__colors {
+      margin-left: 0.25em;
+      margin-right: 0.25em; } }
 
 .grid__col--12.theme__colors {
   background-color: #58e1c1; }
@@ -559,12 +578,8 @@ template {
   font-weight: normal;
   margin: 0; }
 
-.link {
-  font-weight: 900;
-  color: #58e1c1;
-  text-decoration: none; }
-  .link:hover {
-    color: #20b391; }
+.link:hover {
+  color: #20b391; }
 
 .blockquote {
   border-left: 12px #58e1c1 solid;
@@ -590,8 +605,6 @@ template {
   display: none; }
 
 .img--logo {
-  width: 12em;
-  display: block;
   margin-top: 3em;
   margin-bottom: 4em; }
   @media (min-width: 441px) {
@@ -599,8 +612,6 @@ template {
       margin: 1em;
       width: 8em; } }
 .img--avatar {
-  width: 12em;
-  display: block;
   margin: 2em auto;
   border: 1em solid transparent; }
 .img--frame {
