--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,7 +12,7 @@ ul {
   list-style: none;
   text-align: center;
   padding-left: 0;
-  @media (min-width: $break-t) {
+  @include mq() {
     display: flex;
     justify-content: flex-end;
   }
@@ -26,7 +26,6 @@ p {
   max-width: 1024px;
   margin: 0 auto;
   padding: 1.5em;
-  width: 100%;
 }
 
 .centered {
