--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -2,29 +2,84 @@
 // Grid Styles
 // ==========================================================================
 
+// Styles to make .grid__row a flexbox container
+// .grid__row {
+//   margin: 2em 0;
+//   @include mq() {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+//     align-items: center;
+//     margin-top: 1em;
+//     margin-bottom: 1em;
+//   }
+// }
+
 .grid__row {
-  @media (min-width: $break-t) {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column: span 12;
-    grid-gap: 1em;
-    margin-top: 1em;
-    margin-bottom: 1em;
+  margin: 2em 0;
+  @include mq() {
+    @include flexbox {
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
   }
 }
 
-// Grid creator
-@for $i from 1 through 12 {
-  .grid__col--#{$i} {
-    grid-column: span #{$i};
+// Flex-item loop to assign correct flex-grow property
+@include mq() {
+  @for $i from 1 through 12 {
+    .grid__col--#{$i} {
+      // flex-grow: #{$i};
+      width: calc(1024px*calc(#{$i}/12));
+      // margin-left: 0.5em;
+      // margin-right: 0.5em;
+    }
   }
 }
+
+
+
+// Styles to make .grid__row a CSS Grid
+// .grid__row {
+//   @media (min-width: $break-t) {
+//     display: grid;
+//     grid-template-columns: repeat(12, 1fr);
+//     grid-column: span 12;
+//     grid-gap: 1em;
+//     margin-top: 1em;
+//     margin-bottom: 1em;
+//   }
+// }
+//
+// // Grid creator
+// @for $i from 1 through 12 {
+//   .grid__col--#{$i} {
+//     grid-column: span #{$i};
+//   }
+// }
+
+// .theme__colors {
+//   margin: 0.5em 0;
+//   padding-top: 1em;
+//   padding-bottom: 1em;
+//   border-radius: 0.5em;
+//   text-align: center;
+//   @media (min-width: $break-t) {
+//     margin-left: 0.25em;
+//     margin-right: 0.25em;
+//   }
+// }
 
 .theme__colors {
+  margin: 0.5em 0;
   padding-top: 1em;
   padding-bottom: 1em;
   border-radius: 0.5em;
   text-align: center;
+  @include mq() {
+    margin-left: 0.25em;
+    margin-right: 0.25em;
+  }
 }
 
 $theme-color-map: (
