--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -2,5 +2,6 @@
 // Utility Imports
 // ==========================================================================
 
+@import 'variables';
 @import 'mixins';
 @import 'extends';
