--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -15,11 +15,21 @@
   }
 }
 
-// Media Query Mixin
-@mixin mq($break) {
-  @if $break == 't' {
+// Media Query Mixin - v2
+@mixin mq() {
     @media (min-width: $break-t) {
       @content;
     }
-  }
+}
+
+
+// Flexbox mixin
+
+@mixin flexbox {
+ display:-webkit-box;
+ display:-moz-box;
+ display:-ms-flexbox;
+ display:-webkit-flex;
+ display:flex;
+ @content
 }
