--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -16,8 +16,8 @@
 }
 
 // Media Query Mixin - v2
-@mixin mq() {
-    @media (min-width: $break-t) {
+@mixin mq($breakpoint) {
+    @media (min-width: $breakpoint) {
       @content;
     }
 }
