--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -43,4 +43,6 @@ $base__font-size                       : 16px;
 $base__line                            : 24px;
 
 // Breakpoint for Treehouse Project 5
-$break-t                               : 441px;
+$break-m                               : 425px;
+$break-t                               : 768px;
+$break-d                               : 1024px;
