--- a/css/application.css
+++ b/css/application.css
@@ -13,10 +13,14 @@
   font-weight: 700;
   width: 100%;
   margin: 1em 0;
-  padding: 1.5em 0; }
-  @media (min-width: 441px) {
+  padding: 1.5em 0em; }
+  @media (min-width: 768px) {
     .btn, .btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
-      max-width: 12em; } }
+      width: auto;
+      padding: 1.5em 2em; } }
+  @media (min-width: 1024px) {
+    .btn, .btn--default, .btn--success, .btn--error, .btn--warning, .btn--info {
+      width: 15%; } }
 
 .form__input {
   border-bottom: 8px #58e1c1 solid;
@@ -34,7 +38,7 @@
   padding: 1em 0;
   border-radius: 0.5em;
   text-decoration: none; }
-  @media (min-width: 441px) {
+  @media (min-width: 768px) {
     .nav__item, .nav__item--active {
       padding: 1em; } }
 
@@ -460,7 +464,7 @@ ul {
   list-style: none;
   text-align: center;
   padding-left: 0; }
-  @media (min-width: 441px) {
+  @media (min-width: 768px) {
     ul {
       display: flex;
       justify-content: flex-end; } }
@@ -475,7 +479,7 @@ p {
 
 .grid__row {
   margin: 2em 0; }
-  @media (min-width: 441px) {
+  @media (min-width: 768px) {
     .grid__row {
       display: -webkit-box;
       display: -moz-box;
@@ -485,7 +489,7 @@ p {
       margin-top: 1em;
       margin-bottom: 1em; } }
 
-@media (min-width: 441px) {
+@media (min-width: 768px) {
   .grid__col--1 {
     width: calc(1024px*calc(1/12)); }
 
@@ -527,7 +531,7 @@ p {
   padding-bottom: 1em;
   border-radius: 0.5em;
   text-align: center; }
-  @media (min-width: 441px) {
+  @media (min-width: 768px) {
     .theme__colors {
       margin-left: 0.25em;
       margin-right: 0.25em; } }
@@ -607,7 +611,7 @@ p {
 .img--logo {
   margin-top: 3em;
   margin-bottom: 4em; }
-  @media (min-width: 441px) {
+  @media (min-width: 768px) {
     .img--logo {
       margin: 1em;
       width: 8em; } }
