--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,7 +12,7 @@ ul {
   list-style: none;
   text-align: center;
   padding-left: 0;
-  @include mq() {
+  @include mq($break-t) {
     display: flex;
     justify-content: flex-end;
   }
